# Digital-capability-management-model

./: .env  .gitignore  README.md  credentials.json  docker-compose.yml  finalized_model.sav  insert_model.py  requirements.txt  setup.cfg  setup.py  tfidftransformer.sav  token.pickle  trello_log  vectorizer.sav
dataset/: apache_hadoop_hdfs_tests.csv  apache_hbase_tests.csv  apache_hive_tests.csv  apache_ignite_tests.csv  apache_lucene_tests.csv  apache_solr_tests.csv  apache_spark_tests.csv  guacamole_karaf_improvements.csv  guacamole_karaf_newfeatures.csv  hadoop_tests.csv  jfrog_artifactory_bin_repo_bugs.csv  jfrog_artifactory_bin_repo_improvements.csv  jfrog_artifactory_bin_repo_newfeatures.csv  kafka_newfeatures.csv  kafka_tests.csv  mongodb_server_newfeatures.csv  newfeatures.csv  ovirt_newfeatures.csv  qt_suggestions.csv  sakai_feature_requests.csv  scrapper.py
dcmm_gatherer/: API_adapter.py  API_communicator.py  Dockerfile  GithubGatherer.py  GoogleCalendarGatherer.py  JiraGatherer.py  TrelloGatherer.py  __main__.py  classification_scheduler.py  constants.py  database_manipulator.py  dataset_preparation.py  gatherer_constructor.py  input_arguments.py  ml_model.py  requirements.txt
django-web/: manage.py  mydatabase
examples/: 7919.events  7930.events  milestoned.json
mongo/: Dockerfile_mongo
src/: API_adapter.py  API_communicator.py  GithubGatherer.py  GoogleCalendarGatherer.py  JiraGatherer.py  TrelloGatherer.py  classification_scheduler.py  constants.py  credentials.json  database_manipulator.py  dataset_preparation.py  gatherer.py  input_arguments.py  (+2 more)
(+54 files in other folders)
