[metadata]
name = dcmm_gatherer
description = dcmm_gatherer: Set of gatherers from Github, Jira, Trello and Google calendar used for DCMM entities
url = https://docs.pytest.org/en/latest/
author = Martin Vasko
license = MIT
; license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = DCMM, API gathering, machine learning, big data
; project_urls =
;     Source=https://github.com/pytest-dev/pytest
;     Tracker=https://github.com/pytest-dev/pytest/issues

[options]
packages = ./
python_requires = >=3.6
package_dir =
    = dcmm_gatherer
setup_requires =
    setuptools>=40.0
    setuptools-scm
zip_safe = no

[options.entry_points]
console_scripts =
    dcmm_gatherer=classification_scheduler:main

[options.extras_require]
checkqa-mypy =
    mypy==0.780
testing =
    argcomplete
    hypothesis>=3.56
    mock
    nose
    requests
    xmlschema
